@@ -1,0 +1,3 @@
+// 1.21.1	2025-06-20T00:06:35.8434536	Modopedia BookContent[example]: example[en_us]
+628c3cc532ec9df6b6520f380dedfd1a5cb3a25a assets/example/modopedia/books/example/en_us/categories/example.json
+6037d0c04cdedf8cfad47a8d596e3c51c4c0da5d assets/example/modopedia/books/example/en_us/entries/text_entry.json
