@@ -1,5 +1,5 @@
 [versions]
-    modopedia = "1.0.14"
+    modopedia = "1.0.15"
 
 # Common
     minecraft = "1.21.1"
